--- a/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga2/snp2.4_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "snp2.4:7.3": "tun, was nicht zu tadeln ist: ",
   "snp2.4:7.4": "Das ist der höchste Segen. ",
   "snp2.4:8.1": "Dem Bösen widerstehen, es vermeiden, ",
-  "snp2.4:8.2": "auf Alkohol verzichten, ",
+  "snp2.4:8.2": "auf das Branntweintrinken verzichten, ",
   "snp2.4:8.3": "Beflissenheit bei guten Eigenschaften: ",
   "snp2.4:8.4": "Das ist der höchste Segen. ",
   "snp2.4:9.1": "Achtung und Bescheidenheit, ",
