--- a/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "snp4.15:1.4": "und wie ich davon ergriffen wurde. ",
   "snp4.15:2.1": "Ich sah diese Bevölkerung zappeln ",
   "snp4.15:2.2": "wie ein Fisch in einer kleinen Pfütze. ",
-  "snp4.15:2.3": "Als ich sah, wie sie einander bekämpften, ",
+  "snp4.15:2.3": "Als ich sah, wie sie uneins waren, ",
   "snp4.15:2.4": "wurde ich von Furcht gepackt. ",
   "snp4.15:3.1": "Ohne Inhalt war die Welt, ",
   "snp4.15:3.2": "in allen Richtungen war Aufruhr. ",
