--- a/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "snp4.15:3.3": "Einen Wohnort wollte ich für mich, ",
   "snp4.15:3.4": "doch nirgends sah ich etwas unbewohnt. ",
   "snp4.15:4.1": "Aber selbst an ihren Wohnplätzen waren sie uneins – ",
-  "snp4.15:4.2": "als ich das sah, wurde mir unheimlich. ",
+  "snp4.15:4.2": "als ich das sah, wurde mir beklommen. ",
   "snp4.15:4.3": "Dann sah ich da einen Pfeil, ",
   "snp4.15:4.4": "der im Herzen steckte, so schwer zu sehen. ",
   "snp4.15:5.1": "Von diesem Pfeil getroffen ",
