Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/snp/vagga4/snp4.15_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "snp4.15:2.2": "wie ein Fisch in einer kleinen Pfütze. ",
   "snp4.15:2.3": "Als ich sah, wie sie uneins waren, ",
   "snp4.15:2.4": "wurde ich von Furcht gepackt. ",
-  "snp4.15:3.1": "Ohne Inhalt war die Welt, ",
+  "snp4.15:3.1": "Wankelmütig war die Welt, ",
   "snp4.15:3.2": "in allen Richtungen war Aufruhr. ",
   "snp4.15:3.3": "Einen Wohnort wollte ich für mich, ",
   "snp4.15:3.4": "doch nirgends sah ich etwas unbewohnt. ",
