--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -1,4 +1,5 @@
 {
   "snp1.8:0.1": "Суттанипата 1.8 ",
-  "snp1.8:0.2": "Доброжелательность "
+  "snp1.8:0.2": "Доброжелательность ",
+  "snp1.8:1.1": "Сие тот должен сделать, искусен кто в благом, "
 }
