--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -3,5 +3,6 @@
   "snp1.8:0.2": "Доброжелательность ",
   "snp1.8:1.1": "Сие тот должен сделать, искусен кто в благом, ",
   "snp1.8:1.2": "Пробившись к состоянию покоя: ",
-  "snp1.8:1.3": "Он должен: быть умелым, честным, крайне честным, "
+  "snp1.8:1.3": "Он должен: быть умелым, честным, крайне честным, ",
+  "snp1.8:1.4": " Быть мягким, без гордыни, слушаться совета; "
 }
