--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -5,5 +5,6 @@
   "snp1.8:1.2": "Пробившись к состоянию покоя: ",
   "snp1.8:1.3": "Он должен: быть умелым, честным, крайне честным, ",
   "snp1.8:1.4": "Быть мягким, без гордыни, слушаться совета; ",
-  "snp1.8:2.1": "Довольным быть, тем, содержать кого легко, "
+  "snp1.8:2.1": "Довольным быть, тем, содержать кого легко, ",
+  "snp1.8:2.2": " Обязанностей мало брать и бережливо жить; "
 }
