--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -8,5 +8,6 @@
   "snp1.8:2.1": "Довольным быть, тем, содержать кого легко, ",
   "snp1.8:2.2": "Обязанностей мало брать и бережливо жить; ",
   "snp1.8:2.3": "Благоразумным быть и с мирными вратами чувств, ",
-  "snp1.8:2.4": "Учтивым быть и в семьях жажды не иметь. "
+  "snp1.8:2.4": "Учтивым быть и в семьях жажды не иметь. ",
+  "snp1.8:3.1": "Мельчайшего не должен делать ничего, "
 }
