--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -9,5 +9,6 @@
   "snp1.8:2.2": "Обязанностей мало брать и бережливо жить; ",
   "snp1.8:2.3": "Благоразумным быть и с мирными вратами чувств, ",
   "snp1.8:2.4": "Учтивым быть и в семьях жажды не иметь. ",
-  "snp1.8:3.1": "Мельчайшего не должен делать ничего, "
+  "snp1.8:3.1": "Мельчайшего не должен делать ничего, ",
+  "snp1.8:3.2": "За что мудрейшие смогли бы упрекнуть. "
 }
