--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -10,5 +10,6 @@
   "snp1.8:2.3": "Благоразумным быть и с мирными вратами чувств, ",
   "snp1.8:2.4": "Учтивым быть и в семьях жажды не иметь. ",
   "snp1.8:3.1": "Мельчайшего не должен делать ничего, ",
-  "snp1.8:3.2": "За что мудрейшие смогли бы упрекнуть. "
+  "snp1.8:3.2": "За что мудрейшие смогли бы упрекнуть. ",
+  "snp1.8:3.3": "Пусть будут счастливы все существа, сохранны! "
 }
