--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -12,5 +12,6 @@
   "snp1.8:3.1": "Мельчайшего не должен делать ничего, ",
   "snp1.8:3.2": "За что мудрейшие смогли бы упрекнуть. ",
   "snp1.8:3.3": "Пусть будут счастливы все существа, сохранны! ",
-  "snp1.8:3.4": "Пусть внутренне счастливыми пребудут! "
+  "snp1.8:3.4": "Пусть внутренне счастливыми пребудут! ",
+  "snp1.8:4.1": "Какими б в мире ни были живые существа – "
 }
