--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -15,5 +15,6 @@
   "snp1.8:3.4": "Пусть внутренне счастливыми пребудут! ",
   "snp1.8:4.1": "Какими б в мире ни были живые существа – ",
   "snp1.8:4.2": "И сильный, слабый, все, без упущений, ",
-  "snp1.8:4.3": "Все – средние, и мелкие, и тучные, "
+  "snp1.8:4.3": "Все – средние, и мелкие, и тучные, ",
+  "snp1.8:4.4": "Все – длинные, короткие, большие; "
 }
