Translations by neptunao to translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json

--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -16,5 +16,6 @@
   "snp1.8:4.1": "Какими б в мире ни были живые существа – ",
   "snp1.8:4.2": "И сильный, слабый, все, без упущений, ",
   "snp1.8:4.3": "Все – средние, и мелкие, и тучные, ",
-  "snp1.8:4.4": "Все – длинные, короткие, большие; "
+  "snp1.8:4.4": "Все – длинные, короткие, большие; ",
+  "snp1.8:5.1": "Будь они видимы и будь они незримы, "
 }
