--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -19,5 +19,6 @@
   "snp1.8:4.4": "Все – длинные, короткие, большие; ",
   "snp1.8:5.1": "Будь они видимы и будь они незримы, ",
   "snp1.8:5.2": "Живут они вдали, а может, близко, ",
-  "snp1.8:5.3": "Что очутились здесь иль вскоре очутятся, "
+  "snp1.8:5.3": "Что очутились здесь иль вскоре очутятся, ",
+  "snp1.8:5.4": "Пусть внутренне счастливыми все будут существа! "
 }
