Translations by neptunao to translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json

--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -20,5 +20,6 @@
   "snp1.8:5.1": "Будь они видимы и будь они незримы, ",
   "snp1.8:5.2": "Живут они вдали, а может, близко, ",
   "snp1.8:5.3": "Что очутились здесь иль вскоре очутятся, ",
-  "snp1.8:5.4": "Пусть внутренне счастливыми все будут существа! "
+  "snp1.8:5.4": "Пусть внутренне счастливыми все будут существа! ",
+  "snp1.8:6.1": "И никому не следует обманывать другого, "
 }
