--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -22,5 +22,6 @@
   "snp1.8:5.3": "Что очутились здесь иль вскоре очутятся, ",
   "snp1.8:5.4": "Пусть внутренне счастливыми все будут существа! ",
   "snp1.8:6.1": "И никому не следует обманывать другого, ",
-  "snp1.8:6.2": "Как презирать не следует нигде и никого. "
+  "snp1.8:6.2": "Как презирать не следует нигде и никого. ",
+  "snp1.8:6.3": "И по причине злобы, из-за мыслей отвращения "
 }
