Translations by neptunao to translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json

--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -23,5 +23,6 @@
   "snp1.8:5.4": "Пусть внутренне счастливыми все будут существа! ",
   "snp1.8:6.1": "И никому не следует обманывать другого, ",
   "snp1.8:6.2": "Как презирать не следует нигде и никого. ",
-  "snp1.8:6.3": "И по причине злобы, из-за мыслей отвращения "
+  "snp1.8:6.3": "И по причине злобы, из-за мыслей отвращения ",
+  "snp1.8:6.4": "Страдания другому ты не пожелай. "
 }
