--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -24,5 +24,6 @@
   "snp1.8:6.1": "И никому не следует обманывать другого, ",
   "snp1.8:6.2": "Как презирать не следует нигде и никого. ",
   "snp1.8:6.3": "И по причине злобы, из-за мыслей отвращения ",
-  "snp1.8:6.4": "Страдания другому ты не пожелай. "
+  "snp1.8:6.4": "Страдания другому ты не пожелай. ",
+  "snp1.8:7.1": "Подобно матери, что защищала б сына, "
 }
