--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -26,5 +26,6 @@
   "snp1.8:6.3": "И по причине злобы, из-за мыслей отвращения ",
   "snp1.8:6.4": "Страдания другому ты не пожелай. ",
   "snp1.8:7.1": "Подобно матери, что защищала б сына, ",
-  "snp1.8:7.2": "Единственного сына, жизнью собственной своей, "
+  "snp1.8:7.2": "Единственного сына, жизнью собственной своей, ",
+  "snp1.8:7.3": "Вот так ко всем живущим нужно развивать "
 }
