--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -27,5 +27,6 @@
   "snp1.8:6.4": "Страдания другому ты не пожелай. ",
   "snp1.8:7.1": "Подобно матери, что защищала б сына, ",
   "snp1.8:7.2": "Единственного сына, жизнью собственной своей, ",
-  "snp1.8:7.3": "Вот так ко всем живущим нужно развивать "
+  "snp1.8:7.3": "Вот так ко всем живущим нужно развивать ",
+  "snp1.8:7.4": "Ума то состояние, лишённое границ. "
 }
