--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -28,5 +28,6 @@
   "snp1.8:7.1": "Подобно матери, что защищала б сына, ",
   "snp1.8:7.2": "Единственного сына, жизнью собственной своей, ",
   "snp1.8:7.3": "Вот так ко всем живущим нужно развивать ",
-  "snp1.8:7.4": "Ума то состояние, лишённое границ. "
+  "snp1.8:7.4": "Ума то состояние, лишённое границ. ",
+  "snp1.8:8.1": "И к миру целому "
 }
