--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -30,5 +30,6 @@
   "snp1.8:7.3": "Вот так ко всем живущим нужно развивать ",
   "snp1.8:7.4": "Ума то состояние, лишённое границ. ",
   "snp1.8:8.1": "И к миру целому ",
-  "snp1.8:8.2": "Доброжелательность ты должен развивать, "
+  "snp1.8:8.2": "Доброжелательность ты должен развивать, ",
+  "snp1.8:8.3": " Ума то состояние, лишённое границ – "
 }
