--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -31,5 +31,6 @@
   "snp1.8:7.4": "Ума то состояние, лишённое границ. ",
   "snp1.8:8.1": "И к миру целому ",
   "snp1.8:8.2": "Доброжелательность ты должен развивать, ",
-  "snp1.8:8.3": "Ума то состояние, лишённое границ – "
+  "snp1.8:8.3": "Ума то состояние, лишённое границ – ",
+  "snp1.8:8.4": "И вверх, и вниз, по сторонам – бескрайне, "
 }
