Translations by neptunao to translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json

--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -33,5 +33,6 @@
   "snp1.8:8.2": "Доброжелательность ты должен развивать, ",
   "snp1.8:8.3": "Ума то состояние, лишённое границ – ",
   "snp1.8:8.4": "И вверх, и вниз, по сторонам – бескрайне, ",
-  "snp1.8:9.1": "Без всяческих врагов и неприязни. "
+  "snp1.8:9.1": "Без всяческих врагов и неприязни. ",
+  "snp1.8:9.2": "Стоишь ли ты, идёшь или сидишь, "
 }
