Translations by neptunao to translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json

--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -35,6 +35,6 @@
   "snp1.8:8.4": "Без всяческих врагов и неприязни. ",
   "snp1.8:9.1": "Стоишь ли ты, идёшь или сидишь, ",
   "snp1.8:9.2": "Лежишь, покуда ты не засыпаешь, ",
-  "snp1.8:9.3": "Лежишь, покуда ты не засыпаешь, ",
+  "snp1.8:9.3": "Настройся на осознанность вот эту: ",
   "snp1.8:9.4": "Настройся на осознанность вот эту: "
 }
