--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -37,5 +37,6 @@
   "snp1.8:9.2": "Лежишь, покуда ты не засыпаешь, ",
   "snp1.8:9.3": "Настройся на осознанность вот эту: ",
   "snp1.8:9.4": "Божественной обителью зовётся. ",
-  "snp1.8:10.1": "Воззрений никаких не принимая, "
+  "snp1.8:10.1": "Воззрений никаких не принимая, ",
+  "snp1.8:10.2": " Имея видение, благое поведение, "
 }
