--- a/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/kn/snp/vagga1/snp1.8_translation-ru-sv.json
@@ -39,5 +39,6 @@
   "snp1.8:9.4": "Божественной обителью зовётся. ",
   "snp1.8:10.1": "Воззрений никаких не принимая, ",
   "snp1.8:10.2": "Имея видение, благое поведение, ",
-  "snp1.8:10.3": "Отбросив жажду к чувственным усладам, "
+  "snp1.8:10.3": "Отбросив жажду к чувственным усладам, ",
+  "snp1.8:10.4": "В утробы ложе никогда не возвратишься. "
 }
